<resources>
    <string name="app_name">MobSoftApp</string>
    <string name="database">ProductStore.db</string>
    <string name="action_settings">About page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Products</string>
    <string name="second_fragment_label">Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="image">Image</string>
    <string name="delete_question">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="add_product">Add Product</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="rating_count">Rating count</string>
    <string name="introduction">I\'m Gábor Ipolyszegi. I\'m doing my master\'s degree at the moment in Budapest University of Technology and Economics on the Faculty of Electrical Engineering and Informatics.</string>
    <string name="my_story">MY STORY</string>
    <string name="purpose">This application was developed within the framework of the Mobile Software Laboratory subject. The purpose was to get familiar with modern architecture technologies used in Android applications.</string>
    <string name="update_product">Update product</string>
    <string name="dollar_sign">$</string>
    <string name="update">Update</string>
</resources>