<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutPageFragment"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/my_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:text="@string/introduction"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"/>

    <TextView
        android:text="@string/purpose"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"/>

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>