<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="100dp"
    android:layout_height="match_parent"
    tools:context=".ui.dialogs.CreateProductDialogFragment"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>-->

        <EditText
            android:id="@+id/test_edit_text_1"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"/>

    </LinearLayout>

    <EditText
        android:id="@+id/test_edit_text_2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/category"/>

    <EditText
        android:id="@+id/test_edit_text_3"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/image"/>

</LinearLayout>